fix: wrapping

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
